[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/mario.png" type="Texture" id=2]
[ext_resource path="res://Samples/smw_lost_a_life.wav" type="AudioStream" id=3]
[ext_resource path="res://Samples/smw_jump.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 19.0

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 4, 9, 23, 33 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 235, 166, 45, 37 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 196, 166, 45, 37 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 361, 48, 35, 36 ), Rect2( 320, 87, 35, 37 ), Rect2( 281, 87, 35, 37 ) ]
}

[node name="player" type="RigidBody2D"]
mode = 2
gravity_scale = 10.0
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 361, 48, 35, 36 )

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( -3, 0 )
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "run"
playback_speed = 1.3
anims/die = SubResource( 2 )
anims/falling = SubResource( 3 )
anims/floating = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="die_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="flap_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
[connection signal="finished" from="die_fx" to="." method="_on_die_fx_finished"]
